# jokinojo

./: README.md  network.proto
cpp_server/: .gitignore  CMakeLists.txt  README.md  main.cpp
cpp_server/libraries/asio/include/asio/: defer.hpp  dispatch.hpp  executor_work_guard.hpp  post.hpp
desktop/: CMakeLists.txt  MediaPlayer.cpp  MediaPlayer.hh  Networker.cpp  Networker.hh  Networking.cpp  Networking.hh  README.md  main.cpp  network.pb.cc  network.pb.h  network.proto
desktop/libraries/asio/include/asio/: associated_executor.hpp  associated_immediate_executor.hpp  buffer_registration.hpp  co_spawn.hpp  io_context.hpp  strand.hpp
desktop/libraries/asio/include/asio/detail/impl/: scheduler.ipp
python/chat/: Dockerfile  client.py  network.proto  network_pb2.py  room.py  server.py  user.py
python/fileshare/: FileTransfer.py  file.proto  receiver.py  sender.py
python/proto_test/: client.py  room.proto  room_pb2.py  server.py
